# flux_data

./: .dockerignore  .env.example  .gitignore  AGENT_PIPELINE.md  BACKEND_SERVERS_GUIDE.md  CLAUDE.md  Dockerfile  GEMINI_SETUP_GUIDE.md  IMPLEMENTATION_PLAN.md  PROJECT_SUMMARY.txt  README.md  README1.md  README_ANALYSIS.md  Retail_Placement_API.postman_collection.json  Retail_Placement_API_v2.postman_collection.json  STATE_LOGGING_GUIDE.md  UNITY_MVP_SETUP.md  docker-compose.host-ollama.yml  docker-compose.ollama.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  save_agent_prompts.sh  setup_retail_agents.sh  start-docker.sh  start_demo.sh  test-docker.sh  test_agents.py  test_coca_cola_strict.py  test_face_cream_workflow.py  test_filter_llm.py  test_llm_strict_prompt.py  test_simple.py  test_workflow_demo.py
agents/: __init__.py  analyzer_agent.py  analyzer_agent_old.py  base_agent.py  explainer_agent.py  filter_agent.py  input_agent.py
ai-docs/: DOCKER.md  FOLLOW_UP_QUESTIONS_GUIDE.md  HACKATHON_24H_PLAN.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.docker.md  README_COMPLETE.md  START_API_SERVER.md  SYNTHETIC_DATA_GENERATION_PROMPT.md  TESTING_GUIDE.md
api/: __init__.py  game_routes.py  main.py
artifacts/: ARTIFACT_LOGGING_GUIDE.md
backend/: main.py
config/: placement_costs.yaml  placement_costs.yaml.example  zone_visibility.yaml
data/: aisle_rows_structure.json  precomputed_roi.json  retail_kb.csv  sales_history.json  shelves_descriptions.json
demo/: DEMO_SHOWCASE.md  README.md  RUN_DEMO.md  demo_preview.py  planogram_final.html  (+6 more)
(+69 files in other folders)
