[project]
name = "retail-product-placement-agent"
version = "0.1.0"
description = "Multi-agent system for optimal retail product placement recommendations"
requires-python = ">=3.11"
dependencies = [
    # Core API Framework
    "fastapi>=0.121.2",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
    # LLM Integration
    "openai>=1.0.0",
    # Data Processing (Polars for 10x performance)
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "numpy>=1.24.0",
    # Configuration
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    # Workflow Orchestration
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]
ml = [
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "shap>=0.44.0",
    "mlxtend>=0.23.0",
]
